--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+    <h1>Hola</h1>
+    <form id="askName-form">
+      <label for="Name">Cual es tu nombre</label>
+      <input type="name" id="user-name" />
+      <input type="submit" value="Enviar" id="name-button" />
     </form>
-    <div id="resultado-div"></div>
+    <div id="grettingsName-div"></div>
 
     <script type="module" src="./src/presenter.js"></script>
   </body>
