--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <form id="askName-form">
       <label for="Name">Cual es tu nombre</label>
       <input type="name" id="user-name" />
+      <label for="Name">Cual es tu edad</label>
+      <input type="name" id="user-age" />
+      <label for="Name">Genero</label>
+      <select id="gender" name="gender">
+        <option value="male">Masculino</option>
+        <option value="female">Femenino</option>
+        <option value="other">Otro</option>
+      </select>
       <input type="submit" value="Enviar" id="name-button" />
     </form>
     <div id="grettingsName-div"></div>
